--- a/Vanilla Weather App/index.html
+++ b/Vanilla Weather App/index.html
@@ -8,60 +8,53 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@700&display=swap" rel="stylesheet" />
-    <title>Mel's Weather App</title>
+
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
 </head>
 
 <body>
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/629/original/pixel_clouds.png?1663704417" class="clouds" />
     <div class="container">
-        <div class="weather-app">
-            <form class="search-form" id="search-form">
-                <div class="row">
-                    <div class="col-6">
-                        <input type="search" placeholder="Type a city..." autofocus="on" autocomplete="off"
-                            id="city-input" class="form-control shadow-sm" />
-                    </div>
-                    <div class="col-3">
-                        <input type="submit" value="Search" class="form-control btn btn-primary shadow-sm w-100" />
-                    </div>
-                    <div class="col-3">
-                        <button class="btn btn-primary w-100" id="current-location-button">
-                            Current
-                        </button>
-                    </div>
-                </div>
-            </form>
-            <h1 id="city"></h1>
-            <ul>
-                <li id="date"></li>
-                <li id="description"></li>
-            </ul>
-            <div class="row">
-                <div class="col-6">
-                    <div class="clearfix">
-                        <div class="float-left">
-                            <span class="temperature" id="temperature"></span><span class="units">°C</span>
+        <div class="weather-app-wrapper">
+            <div class="weather-app">
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-9">
+                            <input type="search" placeholder="Type a city.." class="form-control" id="city-input"
+                                autocomplete="off" />
+                        </div>
+                        <div class="col-3">
+                            <input type="submit" value="Search" class="btn btn-danger w-100" />
                         </div>
                     </div>
-                </div>
-                <div class="col-6">
+                </form>
+                <div class="overview">
+                    <h1 id="city"></h1>
                     <ul>
-                        <li>Humidity: <span id="humidity"></span>%</li>
-                        <li>Wind: <span id="wind"></span> km/h</li>
+                        <li>Last updated: <span id="date"></span></li>
+                        <li id="description"></li>
                     </ul>
                 </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="clearfix weather-temperature">
+                            <img src="" alt="Clear" id="icon" class="float-left" />
+                            <div class="float-left">
+                                <strong id="temperature"></strong><span class="units"> °C</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <ul>
+                            <li>Humidity: <span id="humidity"></span>%</li>
+                            <li>Wind: <span id="wind"></span> m/h</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="weather-forecast" id="forecast"></div>
             </div>
         </div>
     </div>
-
-    <p>
-        Coded by Melissa Hale 👾
-    </p>
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/046/629/original/pixel_clouds.png?1663704417" class="clouds" />
     <script src="src/app.js"></script>
 </body>
 
